# AgentArena-Local

./: .gitignore  README.md  README.zh-CN.md  findings.md  package-lock.json  package.json  progress.md  pyproject.toml  task_plan.md
docs/: lightswind-anime-web-gui.md  strict-evaluation-task-authoring.zh-CN.md  strict-scoring-rubric.zh-CN.md
examples/agents_md_abtest/: README.md  task.yaml
examples/planning_student_filter/: README.md  task.yaml
examples/planning_student_filter/repo/: README.md  student_api.py
examples/python_debug_login/: README.md  task.yaml
examples/python_feature_todo_filter/: README.md  task.yaml
examples/python_order_pricing/: README.md  task.yaml
examples/python_order_pricing/repo/: pytest.ini
examples/suites/: strict-smoke.yaml
scripts/: build_exe.py  build_gui_exe.py  build_web.cjs  gui_entry.py  release.py
src/agentarena/: __init__.py
src/agentarena/abtest/: __init__.py  agents_md.py  experiment.py  variant.py
src/agentarena/agents/: __init__.py  aider.py  base.py  claude.py  cline.py  codex.py  cursor.py  gemini.py  manual.py  registry.py  windsurf.py
src/agentarena/gitops/: __init__.py  diff.py  worktree.py
src/agentarena_local/: __init__.py  __main__.py  cli.py  config.py  suite.py  tasks.py  web_api.py
tests/: conftest.py  test_abtest.py  test_agent_adapter.py  test_cli.py  test_config.py  test_constraints.py  test_dashboard_generation.py  test_diff.py  test_failure_analysis.py  test_feature.py  test_gui_smoke.py  test_leaderboard.py  test_planning.py  test_report_generation.py  test_runs_browser.py  test_scorer.py  test_strict.py  test_suite.py  test_tasks.py  test_web_gui_smoke.py
web/: README.md  index.html  package.json
web/src/: main.jsx  styles.css
(+58 files in other folders)
