[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agentarena-local"
version = "0.5.0"
description = "Local multi-dimensional benchmark platform for AI coding agents."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
  { name = "AgentArena Local Contributors" }
]
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn>=0.30.0",
  "typer>=0.12.0",
  "rich>=13.7.0",
  "pydantic>=2.6.0",
  "PyYAML>=6.0.1",
  "jinja2>=3.1.0",
  "plotly>=5.18.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
]

[project.scripts]
agentarena = "agentarena_local.cli:app"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-p no:cacheprovider"

[tool.hatch.build.targets.wheel]
packages = ["src/agentarena_local", "src/agentarena"]
